--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ p{
     opacity: 0;
     transition: opacity 0.3s ease;
     /* border: 1px solid white; */
+    color: #596b4f;
 }
 .infoText.show{
     opacity: 1;
