--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ p{
     position: fixed;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
     background-color: #181818;
 }
 
@@ -70,7 +70,7 @@ p{
     position: relative;
     overflow-y: auto;
     scrollbar-width: none;
-    height: calc(100% - 15px);
+    height: calc(100% - 10px);
     width: 100%;
     user-select: none;
     white-space: pre-line;
@@ -78,6 +78,41 @@ p{
     justify-content: center;
     align-items: center;
     /* border: 1px solid white; */
+    display: flex;
+}
+
+#gameWrapper{
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid white; */
+    display: flex;
+    justify-content: start; 
+    align-items: start; 
+    flex-direction: column;
+}
+hr.divider {
+    border: none;               
+    height: 1px;
+    background-color: rgb(43, 43, 43);
+    margin: 0;             
+    width: 100%;
+}
+#dialoguebox{
+    /* border: 1px solid white; */
+    height: 500px;
+    overflow-y: auto;
+    scrollbar-width: none;
+    width: 100%;
+    position: relative;
+}
+#dialoguebox::after{
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: rgb(112, 112, 112);
+    position: fixed;
+    left: 0;
+    bottom: -5px;
 }
 
 .dialogue {
@@ -143,7 +178,6 @@ p{
 }
 
 .infoText{
-    /* border: 1px solid white; */
     margin-bottom: 15px;
     font-weight: 300;
     opacity: 0;
