--- a/styles.css
+++ b/styles.css
@@ -59,11 +59,12 @@ p{
     padding:20px;
     height: 100%;
     width: 100vw;
-    position: fixed;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: end;
-    background-color: #181818;
+    /* background-color: #181818; */
+   
     color: white;
 
 }
@@ -87,28 +88,174 @@ p{
     /* background-image: url(assets/bg.png); */
     background: linear-gradient(to bottom, #1c1004, #080401); 
     background-size: cover;
+    opacity: 1;
+    transition: opacity 0.3s ease;
 }
+#titleScreen.fadeOut {
+    opacity: 0; 
+    pointer-events: none; 
+}
+
+
+#titleScreen.hidden {
+    display: none;
+}
+
+#initialPrompt{
+    width: 100%;
+    height: 100%;
+    /* border: 1px solid #dbd3ca; */
+    position: absolute;
+    z-index: 1;
+}
+#initialPrompt.close{
+    display: none;
+}
+
+.startBtn{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #4e2c0b;
+}
+
 #titleScreen h1{
     font-size: 1.4rem;
-    color: #8a4e13;
+    color: #dbd3ca;
     padding-bottom: 5px;
+    /* margin-top: 20px; */
     border-bottom: 1px solid #4e2c0b;
     opacity: 0; /* start hidden */
     animation: titleFadeIn 1s ease forwards;
-    animation-delay: 1s;
+    animation-delay: 0.5s;
 }
 
 
 .logo{
-    margin-top: 40px;
-    width: 300px;
-    height: 300px;
+    margin-top: 20px;
+    width: 230px;
+    height: 230px;
     background-image: url(assets/logo.svg);
     background-size: contain;
     background-repeat: no-repeat;
 
     animation: logoFadeIn 1s ease forwards;
     animation-delay: 0s, 3s; 
+}
+
+.btnContainer{
+    width: 230px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    opacity: 0;
+    animation: btnFadeIn 1s ease forwards;
+    animation-delay: 1s;
+    pointer-events: none;
+}
+.tbtn{
+    background-color: #4e2c0b;
+    border: none;
+    width: 230px;
+    height: 35px;
+    transition: all 0.3s ease;
+    -webkit-tap-highlight-color: transparent;
+}
+.tbtn:hover{
+    cursor: pointer;
+    /* background-color: #301b07; */
+}
+
+
+#endingBox{
+    width: 290px;
+    height: 170px;
+    opacity: 0;
+    border: 1px solid #4e2c0b;
+    transition: opacity 0.3s ease;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+}
+#endingBox.show{
+    opacity: 1;
+}
+.endingsDiv{
+    color: #dbd3ca;
+    margin-top: 5px;
+    font-family: monospace;
+}
+.endingsDiv h2{
+    font-size: 0.8rem;
+    margin-left: 10px;
+}
+
+#musicplayer{
+    width: 290px;
+    height: 30px;
+    margin-top: 20px;
+    /* border: 1px solid white; */
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    animation: btnFadeIn 1s ease forwards;
+    animation-delay: 1.3s;
+    opacity: 0;
+}
+
+
+.vinyl{
+    height: 100%;
+    width: 30px;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  
+}
+.vinyl.spin{
+    animation: vinylAnimation 3s linear infinite;
+}
+
+.disk{
+    height: 80%;
+    border: 2px solid #dbd3ca;
+    width: 80%;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+}
+.diskLine{
+    height: 100%;
+    width: 2px;
+    background-color: #dbd3ca;;
+}
+
+.music{
+    margin-left: 5px;
+    display: flex;
+    
+}
+.musicPlaying{
+    margin-bottom: 1px;
+    font-size: 0.8rem;
+}
+
+@keyframes vinylAnimation {
+    from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes logoFadeIn {
@@ -123,8 +270,13 @@ p{
 }
 
 @keyframes titleFadeIn {
-    from { opacity: 0; transform: translateY(10px); }
+    from { opacity: 0; transform: translateY(-10px); }
     to   { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes btnFadeIn {
+    from { opacity: 0; transform: translateY(10px); }
+    to   { opacity: 1; transform: translateY(0); pointer-events: auto; }
 }
 #gamescreen{
     position: relative;
@@ -139,7 +291,7 @@ p{
     align-items: center;
     /* border: 1px solid white; */
     display: flex;
-    /* display: none; */
+    display: none;
 }
 
 #gameWrapper{
@@ -239,7 +391,6 @@ hr.divider {
 }
 
 .infoText{
-
     font-weight: 300;
     opacity: 0;
     transition: opacity 0.3s ease;
@@ -247,6 +398,7 @@ hr.divider {
     align-self: flex-start;
     padding-bottom: 15px;
 }
+
 .infoText.show{
     opacity: 1;
 }
