--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,9 @@ p{
     justify-content: start;
     align-items: start;
     flex-direction: column;
+    overflow-y: auto;
+    scrollbar-width: none;
+    padding-bottom: 5px;
 }
 #endingBox.show{
     opacity: 1;
@@ -278,6 +281,8 @@ p{
     from { opacity: 0; transform: translateY(10px); }
     to   { opacity: 1; transform: translateY(0); pointer-events: auto; }
 }
+
+
 #gamescreen{
     position: relative;
     overflow-y: auto;
@@ -469,11 +474,40 @@ hr.divider {
 
 /* Profile */
 
+#backBtn{
+    
+}
+
+.gameBtn{
+    height: 32px;
+    width: 20px;
+    border: none;
+    background-color: #38332e;
+}
+
+.gameScreenBtns{
+    width: 10%;
+    display: flex;
+    align-items: end;
+    gap: 10px;
+    /* border: 1px solid black; */
+    height: 100px;
+    flex-direction: column;
+    margin-top: 5px;
+}
+
+.characterHud{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
 #hud{
     margin-top: 20px;
     width: 100%;
     height: 50px;
     display: flex;
+    /* border: 1px solid black; */
     justify-content: space-between;
   
 }
