--- a/styles.css
+++ b/styles.css
@@ -479,27 +479,60 @@ hr.divider {
 }
 
 .gameBtn{
+    /* display: none; */
     height: 32px;
     width: 20px;
     border: none;
-    background-color: #38332e;
+    background-color: #312d28;
+    /* background-color: #332d26; */
 }
 
 .gameScreenBtns{
-    width: 10%;
+    width: 100%;
     display: flex;
     align-items: end;
+    justify-content: start;
     gap: 10px;
+    
     /* border: 1px solid black; */
     height: 100px;
-    flex-direction: column;
+    /* flex-direction: column; */
     margin-top: 5px;
+    
 }
 
+.gsbCol1{
+    width: 100px;
+    height: auto;
+    display: flex;
+    /* flex-direction: column; */
+    gap: 10px;
+    align-items: start;
+    /* border: 1px solid green; */
+}
+.gsbCol2{
+    justify-content: end;
+    display: flex;
+    
+    /* border: 1px solid red; */
+    width: 100%;
+}
+
+#continueBtn{
+    height: 40px;
+    width: 100%;
+    border: none;
+    background-color: #332d26;
+    transition: transform 0.1s ease, background-color 0.1s ease;
+}
+#continueBtn:active {
+    /* transform: scale(0.95); */
+    background-color: #302a23; /* slightly darker */
+}
 .characterHud{
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 100%;
 }
 
 #hud{
@@ -507,7 +540,8 @@ hr.divider {
     width: 100%;
     height: 50px;
     display: flex;
-    /* border: 1px solid black; */
+    /* border: 1px solid yellow; */
+    flex-direction: column;
     justify-content: space-between;
   
 }
@@ -593,4 +627,52 @@ hr.divider {
 
 .ehealth_text{
     letter-spacing: 0.2rem;
+}
+
+
+.endingPromptContanier{
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: start;
+    align-items: start;
+    gap: 10px;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    /* border: 1px solid white; */
+}
+
+.endingPromptBtns{
+    padding: 4px;
+    width: 50%;
+    height: 40px;
+    opacity: 0;
+    background-color: transparent !important;
+    border: 1px solid white;
+    padding-left: 10px;
+    font-size: 16px;
+    font-weight: 100;
+    /* border-radius: 5px; */
+    transition: all 0.3s ease;   
+    align-items: center;
+    display: flex;
+    /* text-align: start; */
+    color: #ca4646ff;
+}
+.endingPromptBtns span{
+    /* border: 1px solid white; */
+    
+
+}
+
+.endingPromptBtns .icon {
+    font-size: 20px;
+    display: flex;
+    margin-right: 4px;
+    align-items: center;
+    justify-content: center;
+}
+
+.endingPromptBtns.show{
+    opacity: 1;
 }
