added mainmenu theme

--- a/styles.css
+++ b/styles.css
@@ -115,11 +115,11 @@ p{
 #initialPrompt::before {
     content: '';
     position: absolute;
-    top: 30px; /* margin from top */
+    top: 25px; /* margin from top */
     left: 50%; /* horizontally centered */
     width: 207px;  
     height: 207px; 
-    background-image: url(assets/logo.svg);
+    background-image: url(assets/logo.png);
     background-size: contain;  
     background-position: center;
     background-repeat: no-repeat;
@@ -163,13 +163,16 @@ p{
 
 
 .logo{
-    margin-top: 20px;
+    margin-top: 40px;
     width: 230px;
-    height: 230px;
-    background-image: url(assets/logo.svg);
+    height: 180px;
+    margin-bottom: 20px;
+    /* border: 1px solid white; */
+    background-image: url(assets/logo.png);
     background-size: contain;
     background-repeat: no-repeat;
 
+     /* background: linear-gradient(135deg, #ff9a9e, #fad0c4, #a18cd1); */
     opacity: 0;
     animation-delay: 0s, 3s; 
 }
